src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_usage_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 400
expression: normalized
---
{
  "ok": true,
  "result": {
    "enabled": "<ENABLED>",
    "providerCount": "<USAGE_PROVIDER_COUNT>",
    "sessionCount": "<USAGE_SESSION_COUNT>",
    "summary": {
      "inputTokens": "<USAGE_METRIC>",
      "outputTokens": "<USAGE_METRIC>",
      "requests": "<USAGE_METRIC>",
      "totalCost": "<USAGE_METRIC>",
      "totalTokens": "<USAGE_METRIC>"
    },
    "tracking": "<TRACKING>"
  }
}
