src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_voicewake_get.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 409
expression: normalized
---
{
  "ok": true,
  "result": {
    "triggers": []
  }
}
