src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_voicewake_keywords.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 697
expression: normalized
---
{
  "ok": true,
  "result": {
    "keywords": [
      "hey claude",
      "ok claude",
      "claude",
      "jarvis"
    ]
  }
}
