src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_wizard_list.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 701
expression: normalized
---
{
  "ok": true,
  "result": {
    "count": 0,
    "wizards": []
  }
}
