src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_wizard_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 405
expression: normalized
---
{
  "ok": true,
  "result": {
    "active": false,
    "wizardId": null
  }
}
