src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_write_method_read_role.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 512
expression: normalized
---
{
  "error": {
    "code": "INVALID_REQUEST",
    "message": "method 'config.set' requires role 'write', connection has role 'read'",
    "retryable": false
  },
  "ok": false
}
