src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__session_lifecycle_1_list_empty.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 569
expression: normalized
---
{
  "ok": true,
  "result": {
    "count": "<SESSION_COUNT>",
    "defaults": {
      "contextTokens": null,
      "model": null,
      "modelProvider": null
    },
    "path": "<PATH>",
    "sessions": "<SESSIONS_LIST>",
    "ts": "<TIMESTAMP>"
  }
}
