src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__session_lifecycle_2_send.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 583
expression: normalized
---
{
  "error": {
    "code": "INVALID_REQUEST",
    "message": "idempotencyKey is required",
    "retryable": false
  },
  "ok": false
}
