src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__session_lifecycle_4_preview.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 600
expression: normalized
---
{
  "ok": true,
  "result": {
    "previews": [],
    "ts": "<TIMESTAMP>"
  }
}
