src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__session_lifecycle_5_delete.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 611
expression: normalized
---
{
  "ok": true,
  "result": {
    "deleted": false,
    "key": "lifecycle-session",
    "ok": true
  }
}
